--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="d-flex justify-content-center align-items-center h-100">
               <div class="text-white text-center" >
                 <h1 class="redlab-header">R E D L A B </h1>
-                <h4 class="redlab-header">Red de Laboratorios de Analisis Clinicos</h4>
+                <h3 >Red de Laboratorios de Analisis Clinicos</h3>
                
               </div>
         </div>
