--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
      <div class="container-fluid">
    
         <a class="navbar-brand text-body" href="./Redlab.html">
-              <img src="./logolab.jpg" alt="" width="30" height="24" class="d-inline-block align-text-end">
+              <img src="./LOGOLAB.jpg" alt="" width="30" height="24" class="d-inline-block align-text-end">
               Redlab
                
       </a>
