--- a/RedlabNosotros.html
+++ b/RedlabNosotros.html
@@ -37,7 +37,7 @@
      <div class="container-fluid">
    
         <a class="navbar-brand text-body" href="./Redlab.html">
-              <img src="./logolab.jpg" alt="" width="30" height="24" class="d-inline-block align-text-left">
+              <img src="./LOGOLAB.jpg" alt="" width="30" height="24" class="d-inline-block align-text-left">
              Redlab
       </a>
        
